fix README, AUTHORS

--- a/README
+++ b/README
@@ -1,3 +1,10 @@
+- Is there any risk to use this software with my MPIO mp3 player?
+
+We do not really know that, but we do not garantee for anything. If you
+use this software and your MPIO mp3 player turns into a useless brick it
+is your own fault. If you use any other device with this library it would
+be a wonder if does _not_ turn into a brick. So if you use do not like your mp3 player just use this software ;-)
+
 - How to help us finding bugs and learning more about different models
   of the MPIO mp3 players?
 
@@ -5,28 +12,33 @@ The mpiosh shell is at the moment the only user interface to access
 the functionality of libmpio. Because this software is definitly not
 ready yet (pre alpha) and we need a lot of more information about
 different models of the MPIO mp3 players we add special debugging
-functionality to shell to help users to support our work.
+functionality to the shell to help users to support our work.
 
-To activate and to control the debugging output we need to understand
-your bug reports the shell has a special 'debug' command. To activate
-the debug ouput type the following command:
+To help us understanding your bug reports we need a lot of information
+about the data which is exchanged between your MPIO mp3 player and our
+library. To get this information we added a special 'debug' command to 
+the mpio-shell (mpiosh). To activate the debug ouput type the following 
+command:
 
   mpio <i> debug on
 
-to see more detailed deug output the level can be changed using the 'level' option like this:
+to see more detailed debug output the level can be changed using the
+'level' option like this:
 
   mpio <i> debug level 5
 
-This sets the highest debug level available. To make it easier to send us the output you can redirect the debug output to a file like this:
+This sets the highest debug level available. To make it easier to send us
+the output you can redirect the debug output to a file like this:
 
   mpio <i> debug file /tmp/mpio-5.debug
 
 If you would like to help us finding bugs and learning more about the
-protocol of the MPIO players use this debugging support.
+protocol of the MPIO players use this debugging support and send the log
+files to one of the developers or the mailing-list at sourceforge
 
 Thanks for you help.
 
-MPIO-Team
+your MPIO-Team
 
 
 
