--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-22  Andreas Buesching  <crunchy@tzi.de>
+	* README: fixed soome types and add a warning
+	* AUTHORS: add salmoon to the list
+
 2002-08-05  Andreas Buesching  <crunchy@tzi.de>
 
 	* autogen.sh: add script to build configure script
