--- a/TODO
+++ b/TODO
@@ -1,24 +1,24 @@
-$Id: TODO,v 1.1 2002/08/28 16:10:44 salmoon Exp $
+$Id: TODO,v 1.2 2002/09/02 22:25:47 germeier Exp $
 
 * Kernel Module
   - the MPIO can no multitasking, so:
     allow only *one* process to use the device 
+    [did always work, my mistake]
 
 * libmpio
-  - find FAT entry dynamic (DONE)
+  - find FAT entry dynamic [DONE]
   - finish API
   - implement dir functions
   - implement ECC code (we want a GPL code for this)
-  - use ECC code for every read/write operation!!
+    [error checking works, TODO: error correction)
+  - use ECC code for every read/write operation!! [done]
   - implement reading of files
   - implement writing of files
   
   If everything is done:
-  - implement formating of external memory
+  - implement formating of external memory 
   - implement formating of internal memory (BEWARE !!!!)
 
-* mpio_tool
-  - setup nice getopts function
-  - show directory 
-  - read files
-  - write files
+* mpio_tool [is deprecated, use mpiosh]
+
+* mpiosh
