--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2002-09-04  Andreas Buesching  <crunchy@tzi.de>
+
+	* mpio_tool/mpiosh.c (mpiosh_cmd_mput): 
+	added command mput. The arguments can be extended regular
+	expressions. UNTESTED!
+	(mpiosh_cmd_ldir): removed compiler warnings
+	(mpiosh_cmd_mget): added command mget. The arguments can be
+	extended regular expressions. UNTESTED!
+	(mpiosh_cmd_help): updated help text
+
 2002-09-03  Markus Germeier  <mager@tzi.de>
 
 	* first part of "design" fixes
