--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-$Id: TODO,v 1.3 2002/09/04 07:22:42 crunchy Exp $
+$Id: TODO,v 1.4 2002/09/04 07:55:08 crunchy Exp $
 
 * Kernel Module
   - the MPIO can no multitasking, so:
@@ -25,6 +25,6 @@ $Id: TODO,v 1.3 2002/09/04 07:22:42 crunchy Exp $
   - more completion functions
     + command completion [DONE]
     + correct completion of filenames (quoting)
-  - handle regexps in command arguments
+  - handle regexps in command arguments [DONE]
   - use indices for files as possible arguments for put/get
 
