--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2002-09-08  Markus Germeier  <mager@tzi.de>
+
+	* mpio_tool/mpiosh.c: 
+	  (mpiosh_cmd_mput): fixed regex handling
+	  (mpiosh_cmd_mget): fixed regex handling
+	* regex for mput/mget does now work but uses "hard"
+	  regular expressions instead of shell-like regex, e.g.:
+	    "^0.*\.mp3$" ("hard" regular expression) 
+	    "0*.mp3"     (shell-like)
+
 2002-09-04  Andreas Buesching  <crunchy@tzi.de>
 
 	* mpio_tool/mpiosh.c (mpiosh_cmd_mput): 
