--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-$Id: TODO,v 1.4 2002/09/04 07:55:08 crunchy Exp $
+$Id: TODO,v 1.5 2002/09/08 17:03:50 germeier Exp $
 
 * Kernel Module
   - the MPIO can no multitasking, so:
@@ -27,4 +27,4 @@ $Id: TODO,v 1.4 2002/09/04 07:55:08 crunchy Exp $
     + correct completion of filenames (quoting)
   - handle regexps in command arguments [DONE]
   - use indices for files as possible arguments for put/get
-
+  - use shell-like regular expressions
