--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2002-09-09  Markus Germeier  <mager@informatik.uni-bremen.de>
+
+
+2002-09-09  Markus Germeier  <mager@tzi.de>
+
+	* mpio_tool/mpiosh.c: 
+	  (mpiosh_cmd_mput):
+	  (mpiosh_cmd_mget):
+		  make info texts consistent with get and put
+	* libmpio/mpio.c (mpio_init_internal): 
+	  fixed max_clusters for internal memory with more
+	  then one chip
+	* libmpio/fat.c (mpio_fatentry_hw2entry): added function
+	* libmpio/fat.c (mpio_fatentry_entry2hw): added function
+
 2002-09-08  Markus Germeier  <mager@tzi.de>
 
 	* mpio_tool/mpiosh.c: 
