--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,3 @@
-2002-09-09  Markus Germeier  <mager@informatik.uni-bremen.de>
-
-
 2002-09-09  Markus Germeier  <mager@tzi.de>
 
 	* mpio_tool/mpiosh.c: 
@@ -12,6 +9,9 @@
 	  then one chip
 	* libmpio/fat.c (mpio_fatentry_hw2entry): added function
 	* libmpio/fat.c (mpio_fatentry_entry2hw): added function
+	* libmpio/fat.c: 
+	  fixed support for MPIOs with more than one internal chip
+	  (hopefully, someone please test this)
 
 2002-09-08  Markus Germeier  <mager@tzi.de>
 
@@ -21,7 +21,7 @@
 	* regex for mput/mget does now work but uses "hard"
 	  regular expressions instead of shell-like regex, e.g.:
 	    "^0.*\.mp3$" ("hard" regular expression) 
-	    "0*.mp3"     (shell-like)
+	    "0*.mp3"     (shell-like)x
 
 2002-09-04  Andreas Buesching  <crunchy@tzi.de>
 
