--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-09-11  Markus Germeier  <mager@tzi.de>
 
+	* mpio_tool/mpiosh.c (mpiosh_cmd_mdel): added command mdel
+
+2002-09-11  Markus Germeier  <mager@tzi.de>
+
 	* libmpio/mpio.c (mpio_file_put): 
 	  finished support for writing to internal memory
 	  + changes to fat.c and io.c
