--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-$Id: TODO,v 1.10 2002/09/11 13:44:29 germeier Exp $
+$Id: TODO,v 1.11 2002/09/11 21:34:19 germeier Exp $
 
 * Kernel Module
   - the MPIO can no multitasking, so:
@@ -16,8 +16,8 @@ $Id: TODO,v 1.10 2002/09/11 13:44:29 germeier Exp $
   - implement writing of files [partially done]
 	* writing to internal memory [DONE]
 	* resolve remainig block addressing issues in spare area [DONE]
-	* fix 8.3 filenames
-	* fix timestamps of files
+	* fix 8.3 filenames [DONE]
+	* fix timestamps of files [DONE]
   - implement deleting of files [DONE]
   
   If everything is done:
