--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-$Id: TODO,v 1.11 2002/09/11 21:34:19 germeier Exp $
+$Id: TODO,v 1.12 2002/09/12 18:49:34 crunchy Exp $
 
 * Kernel Module
   - the MPIO can no multitasking, so:
@@ -35,3 +35,4 @@ $Id: TODO,v 1.11 2002/09/11 21:34:19 germeier Exp $
   - handle regexps in command arguments [DONE]
   - use indices for files as possible arguments for put/get
   - use shell-like regular expressions
+  - command separator like ';' [DONE]
