--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-$Id: TODO,v 1.12 2002/09/12 18:49:34 crunchy Exp $
+$Id: TODO,v 1.13 2002/09/13 15:20:24 crunchy Exp $
 
 * Kernel Module
   - the MPIO can no multitasking, so:
@@ -32,7 +32,12 @@ $Id: TODO,v 1.12 2002/09/12 18:49:34 crunchy Exp $
   - more completion functions
     + command completion [DONE]
     + correct completion of filenames (quoting)
+    + command option completion
   - handle regexps in command arguments [DONE]
   - use indices for files as possible arguments for put/get
   - use shell-like regular expressions
   - command separator like ';' [DONE]
+  - using stdin for reading command sequences
+  - fill: uses current local directory to fill the current memory card
+    + options: random, best(?)
+
