--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,11 @@
 
 2002-09-13  Andreas Buesching  <crunchy@tzi.de>
 
+	* mpiosh/callback.c (mpiosh_callback_mget, mpiosh_callback_mput) 
+	(mpiosh_callback_mdel): handling of user interrupt
+
+	* mpiosh/mpiosh.c: handling for stdin being a tty
+
 	* mpiosh/callback.c (mpiosh_callback_get, mpiosh_callback_put) 
 	(mpiosh_callback_del): using mpiosh_cancel to abort operation
 
