--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-14  Andreas Buesching  <crunchy@tzi.de>
+
+	* mpiosh/mpiosh.c: fixed output of none interactive mode
+
 2002-09-13  Markus Germeier  <mager@tzi.e>
 
 	* libmpio/mpio.c (mpio_file_put): fixed abort handling
