--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,11 @@
 2002-09-14  Andreas Buesching  <crunchy@tzi.de>
 
 	* mpiosh/mpiosh.c: fixed output of none interactive mode
+	(mpiosh_signal_handler, mpiosh_readline_cancel) 
+	(mpiosh_noredisplay): functions added to get a expected handling
+	of C-c (SIGINT)
 
-2002-09-13  Markus Germeier  <mager@tzi.e>
+2002-09-13  Markus Germeier  <mager@tzi.de>
 
 	* libmpio/mpio.c (mpio_file_put): fixed abort handling
 
