--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2002-09-14  Andreas Buesching  <crunchy@tzi.de>
 
+	* mpiosh/mpiosh.c: does not hang anymore after reading commands
+	from a pipe
+
 	* mpiosh/callback.c (mpiosh_callback_mget, mpiosh_callback_mput) 
 	(mpiosh_callback_mdel): calling new function mpiosh_command_regex_fix
 
