--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2002-09-15  Andreas Buesching  <crunchy@tzi.de>
+
+	* kernel/Makefile.am (install): the kernel module is now installed
+	into the determinated module directory of the current kernel
+	version.
+
+	* mpio.spec.in: created rpm spec file for creating binary and
+	source rpm packages
+
 2002-09-15  Markus Germeier  <mager@tzi.de>
 
 	* mpiosh/callback.c (mpiosh_cmd_debug_mem): added function 
@@ -12,6 +21,8 @@
 
 	* mpiosh/mpiosh.c: add a debug message, displaying the executed
 	command in script mode
+	(mpiosh_command_regex_fix): better mapping for shell regular
+	expressions (hopefully)
 
 2002-09-15  Markus Germeier  <mager@tzi.de>
 
