--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-16  Andreas Buesching  <crunchy@tzi.de>
+
+	* kernel/Makefile.am (install-strip): defined to avoid stripping
+	of the kernel module
+
 2002-09-16  Yuji Touya  <salmoon@users.sourceforge.net>
 
 	* kernel/mpio.c: changed include file to resolve symbols
