--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2002-09-19  Andreas Buesching  <crunchy@tzi.de>
+
+	* mpiosh/callback.c (mpiosh_cmd_mput): using new error handling
+	functions
+
+	* libmpio/mpio.c (mpio_errno, mpio_strerror, mpio_perror): 
+	  add functions for error handling
+	  (mpio_file_get, mpio_file_put, mpio_file_del): using error
+	  handling functions
+
 2002-09-19  Markus Germeier  <mager@tzi.de>
 
 	* libmpio/mpio.c (mpio_init_internal): 
