--- a/README
+++ b/README
@@ -17,10 +17,11 @@ When you want to stop playing, disconnect MPIO and type:
 
 - Is there any risk to use this software with my MPIO mp3 player?
 
-We do not really know that, but we do not garantee for anything. If you
-use this software and your MPIO mp3 player turns into a useless brick it
-is your own fault. If you use any other device with this library it would
-be a wonder if does _not_ turn into a brick. So if you use do not like your mp3 player just use this software ;-)
+We do not really know that, but we do not garantee for anything. If
+you use this software and your MPIO mp3 player turns into a useless
+brick it is your own fault. If you use any other device with this
+library it would be a wonder if does _not_ turn it into a brick. So if
+you do not like your mp3 player just use this software ;-)
 
 - I downloaded a current CVS snapshot but there is no configure script, only
   a configure.in ! What do I have to do??
