--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,22 @@
+2002-09-20  Andreas Buesching  <crunchy@tzi.de>
+
+	* mpiosh/mpiosh.c (mpiosh_command_regex_fix): bug fix for .*
+        do not quote the '.' if next character is a '*'
+
+	* libmpio/mpio.c (mpio_strerror): fixed stupid bug no
+	23.423.543.453.453 (time to go to bed)
+
+2002-09-19  Andreas Buesching  <crunchy@tzi.de>
+
+	* libmpio/mpio.c (mpio_strerror): fixed a strange bug with the
+	argument name. Never call an argument errno?!?
+
 2002-09-19  Markus Germeier  <mager@tzi.de>
 
 	* mpiosh/callback.c (mpiosh_cmd_dump, mpiosh_cmd_mget) 
 	(mpiosh_cmd_mdel, mpiosh_cmd_mput): fixed handling of an abort
 	* libmpio/mpio.c (MPIO_ERR_RETURN): fixed buggy define
+
 
 2002-09-19  Andreas Buesching  <crunchy@tzi.de>
 
@@ -17,7 +31,7 @@
 	  (mpio_file_get, mpio_file_put, mpio_file_del): using error
 	  handling functions
 
->>>>>>> 1.40
+
 2002-09-19  Markus Germeier  <mager@tzi.de>
 
 	* libmpio/mpio.c (mpio_init_internal): 
