--- a/README
+++ b/README
@@ -2,18 +2,25 @@
 
 You should create device file for MPIO. Be root and type following:
 
-   mkmpiodev
+   /usr/local/sbin/mkmpiodev
 
 Once you create it, you do not need to run this script again.
 Next, the driver module has to be loaded before playing.
 
-   depmod -a
-   modprobe mpio
+   /sbin/depmod -a
+   /sbin/modprobe mpio
 
 Connect your MPIO to PC by USB cable. You can run mpiosh shell now.
 When you want to stop playing, disconnect MPIO and type:
 
-   modprobe -r mpio
+   /sbin/modprobe -r mpio
+
+*Hotplug for kernel 2.4.x
+
+ If the Hot plugging tool (like Murasaki) is installed on your
+system, the driver module will be loaded/unloaded automatically
+when MPIO player is connected/disconnected to your PC. And you
+do not need to run modprobe anymore.
 
 - Is there any risk to use this software with my MPIO mp3 player?
 
