--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-28  Markus Germeier  <mager@tzi.de>
+	* a lot of changes!
+	* reading from external memory should work now correctly
+	* BEWARE: all write operations are still broken on external mem!
+
 2002-09-24  Markus Germeier  <mager@tzi.de>
 	* libmpio/directory.c (mpio_dentry_put): fixed 8.3 handling
 	  to allow correct writing of CONFIG.DAT
