--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 2002-09-28  Markus Germeier  <mager@tzi.de>
+
+	* kernel/Makefile.am (distclean): added target distclean
+
+2002-09-28  Markus Germeier  <mager@tzi.de>
 	* a lot of changes!
 	* reading from external memory should work now correctly
 	* BEWARE: all write operations are still broken on external mem!
