add alias support for commands and extended argument completion

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,20 @@
 2002-10-12  Andreas Buesching  <crunchy@tzi.de>
 
+	* mpiosh/global.c (commands): removed commands 'put', 'get' and
+	'del' and add these to the alias lists of 'mput', 'mget' and
+	'mdel'. Also add some more alias to some other commands
+
+	* mpiosh/readline.c (mpiosh_readline_comp_cmd): add aliases to
+	completion list
+
+	* mpiosh/global.c (commands): use command completion for 'help'
+	arguments
+
+	* mpiosh/global.h: add alias list to command struct
+
+	* mpiosh/global.c: new file containing global symbols as the
+	command list
+
 	* mpiosh/callback.c: fix compiler warnings
 
 	* libmpio/mpio.c (mpio_memory_format): fixed compiler warning
