--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-10-26  Markus Germeier  <mager@tzi.de>
+
+	* libmpio/mpio.c (mpio_close): fixed segv
+	* libmpio/*.h:
+	  make libmpio header files C++ compliant
+
 2002-10-23  Markus Germeier  <mager@tzi.de>
 
 	* libmpio/io.c (mpio_io_spare_read): fixed init progress counter
