--- a/ChangeLog
+++ b/ChangeLog
@@ -9,7 +9,16 @@
 	  another fix for the 8.3 handling needed for the config file
 	  (one day this will be bug free ...)
 	* mpiosh/callback.c (mpiosh_cmd_config): implement the function
-
+	* libmpio/directory.c (mpio_dentry_find_name_8_3): 
+	  another fix for the 8.3 handling needed for the config file
+	  (GRR, one day ...)
+	* libmpio/mpio.c (mpio_get_model): added function
+	* mpiosh/callback.c (mpiosh_cmd_switch): implement the function
+	* libmpio/mpio.c (mpio_file_switch): added function
+	* mpiosh/callback.c (mpiosh_cmd_mget): added error message
+	* libmpio/mpio.c (mpio_file_put_real): 
+	  updates to support reading files into memory	
+	
 2002-10-26  Markus Germeier  <mager@tzi.de>
 
 	* libmpio/mpio.c (mpio_close): fixed segv
