saving command history

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-$Id: TODO,v 1.17 2002/10/29 20:03:34 crunchy Exp $
+$Id: TODO,v 1.18 2002/11/04 16:25:17 crunchy Exp $
 
 * Kernel Module
   - the MPIO can no multitasking, so:
@@ -40,5 +40,5 @@ $Id: TODO,v 1.17 2002/10/29 20:03:34 crunchy Exp $
   - fill: uses current local directory to fill the current memory card
     + options: random, best(?)
   - configuration files [almost DONE]
-  - save command history
+  - save command history [DONE]
 
