--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2002-11-04  Andreas Buesching  <crunchy@tzi.de>
+
+	* mpiosh/callback.c (mpiosh_cmd_quit): writing configuration
+	including history und freeing config reader
+
+	* mpiosh/global.c: modified filename for history
+		"~/.mpio/history"
+
+	* mpiosh/config.c (mpiosh_config_new): reading history file
+	(mpiosh_config_write): saving current history
+
 2002-11-02  Yuji Touya  <salmoon@users.sourceforge.net>
 
 	* tools/logotool.c: add a tool to extract/change logo animation
