libmpio: changed license from GPL to LGPL

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2003-04-27 Markus Germeier  <mager@tzi.de>
 	* libmpio: fixed some C code "things" found with
 	  "paranoia" CFLAGS settings
+	* libmpio: changed license from GPL to LGPL
 
 2003-04-21  Markus Germeier  <mager@tzi.de>
 
